--- a/android_code/HeliusCKN/app/src/main/res/layout-land/activity_main.xml
+++ b/android_code/HeliusCKN/app/src/main/res/layout-land/activity_main.xml
@@ -25,4 +25,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="342dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="40dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="20dp"
+        app:cardUseCompatPadding="true"
+        android:background="@drawable/back"
+        app:cardBackgroundColor="@color/black"
+        app:cardPreventCornerOverlap="true"
+        app:cardMaxElevation="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titulo">
+        
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/monogram"
+            android:id="@+id/imagen"/>
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sonorificacion"
+            android:layout_gravity="center_horizontal"
+            android:textSize="18dp"
+            android:textColor="@color/white"/>
+
+        
+    </androidx.cardview.widget.CardView>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
